[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'mdx_gh_links'
version = '0.3.1'
description = "An extension to Python-Markdown which adds support for shorthand links to GitHub users, repositories, issues and commits."
readme = {file = 'README.md', content-type='text/markdown'}
authors = [
    {name = 'Waylan limberg', email = 'waylan.limberg@icloud.com'}
]
license = {file = 'LICENSE'}
dependencies = [
    "markdown>=3.0.0"
]
keywords = ['markdown', 'python-markdown', 'github']
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Documentation',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: Markup',
    'Topic :: Text Processing :: Markup :: HTML'
]

[project.urls]
'Homepage' = 'https://pypi.org/project/mdx-gh-links/'
'Repository' = 'https://github.com/Python-Markdown/github-links'
'Issue Tracker' = 'https://github.com/Python-Markdown/github-links/issues'

[tool.setuptools]
py-modules = ['mdx_gh_links']
